# ATTACC

./: .gitignore  README.md  main.py  pyproject.toml
data/: README.md  dataset_config.yaml  dataset_loader.py
data/datasets/ccd/: config.yaml  folder_structure.md  utils.py
data/preprocessing/: extract_depth_features.py  extract_features.py  extract_frame_depth.py  extract_frame_features.py  extract_object_depth.py  extract_object_detections.py  extract_object_features.py  preprocess_dataset.py  preprocess_single_video.py
demo/: demo.py
logs/: README.md
models/: evaluator.py  loss_tug.py  metrics.py  trainer.py
models/architecture/: accident_model.py  spatial_attention.py  temporal_attention.py
models/saved_models/: README.md
